# 4wrd-reinvented

./: .gitignore  README.md
harness/: pyproject.toml
harness/docs/: s1-cycle-134d7a58-20260419T063634Z.md  s1-cycle-61a694ec-20260419T064140Z.md  s1-cycle-80e8970e-20260419T093341Z.md  s1-cycle-8f7ed127-20260419T092603Z.md  s2-cycle-6794a81e-20260420T021133Z.md
harness/harness/: __init__.py  cli.py  context_package.py  intent_cycle.py  sidecar_integration.py
harness/harness/agents/: __init__.py  adversarial_agent.py  producing_agent.py  research_agent.py
harness/harness/config/: __init__.py  domain_config.py  engagement_config.py  harness_config.py  loader.py  specialisation_config.py
harness/harness/layer2/: __init__.py  cli.py  views.py
harness/harness/lineage/: __init__.py  query.py  tracker.py
harness/harness/orchestrator/: __init__.py  gate.py  runner.py  skill_sequence.py
harness/harness/retirement/: __init__.py  cli.py  registry.py  tombstone.py
harness/harness/sidecar/: __init__.py  detector.py  receptor.py
harness/harness/skills/: __init__.py  e10_feedback_learning.py  e1_problem_definition.py  e2_requirements.py  e3_architecture.py  e4_security_compliance.py  e5_data.py  e6_build.py  e7_test.py  e8_deployment.py  e9_operations.py  s1_problem_crystallisation.py  s2_context_constraint_mapping.py  s3_option_generation.py  s4_option_evaluation.py  s5_solution_selection.py  s6_solution_brief.py
harness/scripts/: demo_s1_cycle.py
harness/tests/: conftest.py  test_chain_sequence.py  test_config_layers.py  test_context_package.py  test_gate.py  test_intent_cycle.py  test_layer2_views.py  test_lineage.py  test_sidecar_boundary_scan.py  test_sidecar_external_signal.py  test_tombstone.py
harness/ui/: run.sh  server.py
harness/ui/static/: app.js  index.html  style.css  templates.js  terminal.js
mvghb/: .env  activate_e6b.sh  pyproject.toml
mvghb/db/: 0001_mvghb.sql
mvghb/mvghb/: __init__.py  cli.py
mvghb/mvghb/bootstrap/: __init__.py  boot.py
mvghb/mvghb/chain_write/: __init__.py  allowlist.py  envelope.py  writer.py
mvghb/mvghb/common/: actors.py  canonical.py  crypto.py  db.py  log.py  settings.py  sql_apply.py
mvghb/mvghb/integrity_verifier/: __init__.py  verifier.py
mvghb/mvghb/master_anchor/: __init__.py  anchor.py
mvghb/mvghb/sidecar/: __init__.py  detector.py
mvghb/noc_bridge/: writer.py
mvghb/tests/: conftest.py  test_chain_writer_live.py  test_crypto.py  test_envelope_canonical.py  test_integrity_verifier_live.py  test_master_anchor_live.py  test_sidecar.py
noc-product/: .env  README.md  docker-compose.yml  pyproject.toml
noc-product/db/: alembic.ini
noc-product/db/init/: noc_data_init.sql  noc_gov_init.sql
noc-product/dev/: Dockerfile  dex-config.yaml
noc-product/dev/alertmanager/: alertmanager.yml
noc-product/scripts/: bootstrap.sh  e6a_exit_verify.sh
noc-product/services/agents/: app.py  (+6 more)
noc-product/tests/: conftest.py
(+94 files in other folders)
