[project]
name = "harness"
version = "0.1.0"
description = "4WRD Claude Agent SDK governed delivery harness — one Intent Cycle."
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40",
    "click>=8.1",
    "mvghb",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
]

[project.scripts]
harness = "harness.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["harness"]

[tool.uv.sources]
mvghb = { path = "../mvghb", editable = true }

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
